src/Components/restList.css
.savedLocations {
	position: absolute;
    z-index: 0;
    right: 3px;
    top: 3px;
    border-radius: 0px;
    cursor: pointer;
    width: 40px;
    height: 40px;
}

/*@media only screen and (max-height: 800px) {
	.savedLocations {
		position: relative;
	    left: 0px;
	    bottom: 0px;
	}
}*/

.deleteButton {
    cursor: pointer;
    position: absolute;
    z-index: 2;
    right: 10px;
    justify-content: right;
    font-size: 2vw;
    color: lightgrey;
}

.deleteButton:hover {
    color: black;
}

label {
    cursor: pointer;
}

